--- a/index.html
+++ b/index.html
@@ -10,26 +10,31 @@
 </head>
 <body>
     <div class="row">
-        <div class="gif-buttons">
-             <!-- put gif buttons here -->
-             <button data-show="The Office" class="btn btn-secondary">The Office </button> 
-             <!-- How do I make these populate from my javascript instead of hardcoding in HMTL? -->
-        </div>
-
-
+        <h1 id="title">Funny TV Show Gifs</h1>
     </div>
+    <div class="row">
+
+        <div class="gif-buttons">
+             
+             <button data-show="The Office" class="btn btn-secondary">The Office </button> 
+             <!-- the button above is a test  -->
+        
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-md-8">
             <div id="gifs-here">GIFS GO HERE</div>
         </div>
         <div class="col-md-4">
             <form class="button-adder">
-                <input type="text" id="show-input" placeholder="type a show">
+                <input type="text" id="show-input" placeholder="add a show!">
                 <div class="search-input">
                     <button type="button" class="btn btn-secondary">Search</button>
                 </div> 
             </form>
         </div>
     </div>
+
 </body>
 </html>
